--- a/AJScoreViewExample/AJScoreViewExample/Base.lproj/Main.storyboard
+++ b/AJScoreViewExample/AJScoreViewExample/Base.lproj/Main.storyboard
@@ -22,13 +22,19 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0a3-zi-mcr" customClass="AJScoreView1">
                                 <color key="backgroundColor" red="1" green="0.53049797060000004" blue="0.1138098295" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="199" id="lph-3G-x5i"/>
+                                    <constraint firstAttribute="height" constant="100" id="lph-3G-x5i"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="umS-S9-pOP" customClass="AJScoreView2">
                                 <color key="backgroundColor" red="1" green="0.53049797060000004" blue="0.1138098295" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="137" id="Dg1-B9-4um"/>
+                                    <constraint firstAttribute="height" constant="100" id="Dg1-B9-4um"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y2y-XL-nAk" customClass="AJScroView3">
+                                <color key="backgroundColor" red="1" green="0.53049797060000004" blue="0.1138098295" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="XTm-pF-Vzq"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -36,9 +42,12 @@
                         <constraints>
                             <constraint firstItem="umS-S9-pOP" firstAttribute="top" secondItem="0a3-zi-mcr" secondAttribute="bottom" constant="20" id="4JK-K8-eFI"/>
                             <constraint firstItem="0a3-zi-mcr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="8FN-Qe-VZl"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="y2y-XL-nAk" secondAttribute="leading" id="9aQ-Ia-RyJ"/>
                             <constraint firstItem="umS-S9-pOP" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="9x2-ou-IFd"/>
                             <constraint firstItem="0a3-zi-mcr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GCg-6r-S7h"/>
                             <constraint firstItem="0a3-zi-mcr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="60" id="KID-Db-WDo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="y2y-XL-nAk" secondAttribute="trailing" id="XND-m9-HaE"/>
+                            <constraint firstItem="y2y-XL-nAk" firstAttribute="top" secondItem="umS-S9-pOP" secondAttribute="bottom" constant="20" id="bhr-74-3zZ"/>
                             <constraint firstItem="umS-S9-pOP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="huS-CK-a1u"/>
                         </constraints>
                     </view>
